# pocketbase-sdk-rust

./: Cargo.toml  README.md
examples/: mydemo.rs
libs/eventsource-client/: Cargo.toml
libs/eventsource-client/src/: client.rs  config.rs  error.rs  event_parser.rs  lib.rs  retry.rs
src/: error.rs  lib.rs
src/client/: auth.rs  base.rs  mod.rs  realtime.rs
src/records/: mod.rs
src/records/operations/: create.rs  delete.rs  list.rs  mod.rs  update.rs  view.rs
src/user/: mod.rs
