[package]
name = "pocketbase-sdk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventsource-client = { path = 'libs/eventsource-client'}
log = "0.4.17"
# hyper = {version = "0.14.25", features = [ "client", "http1", "tcp"]}
reqwest               = { version = "0.11.15", features = ["json"] }
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["macros", "sync"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
url = {version = "2.3.1", features = ["serde"]}
chrono = "0.4.24"

[dev-dependencies]
env_logger = "0.10.0"
simplelog = "0.12.1"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }


[[example]]
name = "mydemo"
